--- a/.classpath
+++ b/.classpath
@@ -16,4 +16,14 @@
       <attribute value="jar:file:/C:/Users/grigore.stancul/.m2/repository/log4j/log4j/1.2.17/log4j-1.2.17-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/opencsv/opencsv/3.7/opencsv-3.7.jar" sourcepath="M2_REPO/com/opencsv/opencsv/3.7/opencsv-3.7-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/grigore.stancul/.m2/repository/com/opencsv/opencsv/3.7/opencsv-3.7-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-lang3/3.3.2/commons-lang3-3.3.2.jar" sourcepath="M2_REPO/org/apache/commons/commons-lang3/3.3.2/commons-lang3-3.3.2-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/grigore.stancul/.m2/repository/org/apache/commons/commons-lang3/3.3.2/commons-lang3-3.3.2-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
 </classpath>
